--- a/classwork/index.html
+++ b/classwork/index.html
@@ -5,7 +5,7 @@
         <title>main page</title>
         <link rel="icon" href="" type="image/x-icon">
         <style> h1 {color: red;}</style>
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
         <body>
             <section id="h">
@@ -21,8 +21,11 @@
                     <a href="https://online-edu.mirea.ru/my/" target="_blank"> сдо new window</a> <br>
                     <a href="#ol"> list_num </a>
                 </section>
-                <section>Hello section!</section>
-                <section><div>Hello div!</div></section>
+                <section>
+                    Hello section!
+                    <div>Hello div!</div>
+                    <footer>Hello footer!</footer>
+                </section>
                 <br><hr>
                 <p style="color: red;">
                     "loren ipsum "
@@ -79,10 +82,10 @@
                 </section>
                 <hr>
                 <section id="image">
-                    <img height="200" width=""  src="./photo/1.jpg" alt="новость1">
-                    <img src="./photo/2.jpg" alt="новость2">
-                    <a href="./photo/1.jpg" target="_blank">
-                        <img src="./photo/2.jpg" alt="новость3">
+                    <img height="200" width="" src="photo/1.jpg" alt="новость1">
+                    <img src="photo/2.jpg" alt="новость2">
+                    <a href="photo/1.jpg" target="_blank">
+                        <img src="photo/2.jpg" alt="новость3">
                     </a>
                     <picture>
                         <source srcset="https://p.turbosquid.com/ts-thumb/Vt/EyYn3N/eS/fnafoffice11/png/1652642882/1920x1080/fit_q87/6ac712f8d831dfd26e850813930dcb1c4b93fe95/fnafoffice11.jpg" media="(min-width: 700px)">
@@ -91,7 +94,7 @@
                 </section>
                 <section id="audio">
                     <audio controls>
-                        <source src="./strashny.mp3" type="audio/mpeg">
+                        <source src="strashny.mp3" type="audio/mpeg">
                     </audio>
                 </section>
                 <section id="video">
@@ -116,7 +119,6 @@
                     </table>
                 </section>
             </main>
-            <footer>Hello footer!</footer>
             <script>document.getElementById("example").innerText = "Объявляем тотальную"</script>
         </body>
 </html>
