--- a/index.html
+++ b/index.html
@@ -6,23 +6,54 @@
   <meta name="Sergei" content="width=device-width, initial-scale=1.0">
   <title>Мои проекты</title>
   <style>
-    .list {
-      padding: 10px;
+    body {
+      background: url("./back.jpg") center/cover no-repeat fixed;
     }
 
-    .list:hover {
-      background: blue;
+    h1 {
+      display: flex;
+      justify-content: center;
+      color: #FFCC00;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .button {
+      background-color: #FFCC00;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      margin: auto;
+      margin-bottom: 100px;
+      font-size: 30px;
+      width: 20%;
+      height: 200px;
+      cursor: pointer;
+    }
+
+
+    a:hover {
+      background-color: rgba(255, 255, 255, 0.9);
     }
   </style>
 </head>
 
 <body>
   <h1>Проекты</h1>
-  <ul class="list">
-    <li><a href="./homework/1hw_resume/">1)html</a></li>
-    <li><a href="./homework/2hw_resume_with_css/"> 2)css</a></li>
-  </ul>
-
+  <div>
+    <a class="button" href="./homework/1hw_resume/">1)html</a>
+    <a class="button" href="./homework/2hw_resume_with_css/">2)css</a>
+  </div>
 </body>
 
-</html>>
+</html>
