add functions and change problems

--- a/homework/2hw_resume_with_css/index.html
+++ b/homework/2hw_resume_with_css/index.html
@@ -27,10 +27,10 @@
     <div>
       <section id="О_себе">
         <h2>О себе</h2>
-        <pre>
-          Учусь в разных облостях, развивая множество видов программирования.
+        <pre style="white-space: pre-wrap;">
+          Привет, меня зовут Астахов Серей. Я учусь в разных областях it, развивая навыки программирования.
           На данный момент, студент 3 курса, технологического вуза, изучаю дисциплины,
-          связанные дальнейшей работой, и прохожу дополнитленые курсы внеучебное время.
+          связанные дальнейшей работой, и прохожу дополнительные курсы внеучебное время.
           Пишу на языках с++ и java. Хочу стать backend или fullstack разработчиком.
         </pre>
       </section>
@@ -91,7 +91,7 @@
     <div>
       <section id="Языки">
         <h2>Языки</h2>
-        <strong>Русский: </strong> Родной<br>
+        <strong>Русский: </strong> Носитель<br>
         <strong>Английский: </strong> A2
       </section>
     </div>
@@ -99,28 +99,29 @@
       <section id="Навыки">
         <h2>Навыки</h2>
         <ol>
-          <li>Работа с языками программирования: с++, python, java, kotlin, </li>
-          <li>Навыки git, github</li>
-          <li>Навык работы с UI: figma</li>
-          <li>Понимание структур данных и алгоритмов</li>
-          <li>Работа с базами данных,postgreSQL, SQL, SQLite</li>
-          <li>Хорошие soft skils</li>
-          <li>Навыки работы с linux</li>
-          <li>html, css</li>
+          <li><strong>Работа с языками программирования:</strong> с++, python, java, kotlin, </li>
+          <li><strong>Навыки</strong> c git, github</li>
+          <li><strong>Навык работы с UI:</strong> figma</li>
+          <li><strong>Понимание структур данных и алгоритмов</strong></li>
+          <li><strong>Работа с базами данных:</strong> postgreSQL, SQL, SQLite</li>
+          <li>Хорошие <strong>soft skils</strong></li>
+          <li>Навыки работы с <strong>linux</strong></li>
+          <li>Стек из Frontend: <strong>html, css</strong></li>
         </ol>
       </section>
     </div>
     <div>
       <section id="Ресурсы">
         <h2>Ресурсы</h2>
+        <div class="icons">
+          <a href="https://t.me/sergg2">
+            <img src="./source/icons/icon_telegram.png" alt="Telegram" width="50px" height="50px">
+          </a>
 
-        <a href="https://t.me/sergg2" class="icon">
-          <img src="./source/icons/icon_telegram.png" alt="Telegram" width="50px" height="50px">
-        </a>
-
-        <a href="https://github.com/sergei5551" class="icon">
-          <img src="./source/icons/icon_github.png" alt="GitHub" width="50px" height="50px">
-        </a>
+          <a href="https://github.com/sergei5551">
+            <img src="./source/icons/icon_github.png" alt="GitHub" width="50px" height="50px">
+          </a>
+        </div>
       </section>
     </div>
   </div>
